--- a/src/app/converter/components/converter/converter.component.html
+++ b/src/app/converter/components/converter/converter.component.html
@@ -10,12 +10,14 @@
       <input type="number" name="value" class="form-control text-right me-4 w-50" placeholder="0" required
         formControlName="value">
       <select name="currencyFrom" class="form-select me-4 w-50" required formControlName="currencyFrom">
-        <option>
+        <option *ngFor="let currency of currencies" [value]="currency.initials">
+          {{ currency.initials }} - {{ currency.description }}
         </option>
       </select>
       <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
       <select name="currencyTo" class="form-select me-4 w-50" required formControlName="currencyTo">
-        <option>
+        <option *ngFor="let currency of currencies" [value]="currency.initials">
+          {{ currency.initials }} - {{ currency.description }}
         </option>
       </select>
       <input type="submit" value="Converter" class="btn btn-success">
