--- a/src/app/converter/components/converter/converter.component.html
+++ b/src/app/converter/components/converter/converter.component.html
@@ -23,4 +23,22 @@
       <input type="submit" value="Converter" class="btn btn-success" [disabled]="!converterForm.valid">
     </form>
   </div>
-</div>
+  <div *ngIf="converterInfo">
+    <div class="card text-center">
+      <div>
+        <h3>Em {{ converterData.date }}</h3>
+        <h2>
+          {{ converterData.value }}
+          {{ converterData.currencyFrom }}
+          =
+          {{ converterData.converterValue }}
+          {{ converterData.currencyTo }}
+        </h2>
+      </div>
+    </div>
+    <div class="d-flex justify-content-end px-4">
+      <button type="button" class="btn btn-primary" (click)="newQuoteQuery()">
+        Nova consulta
+      </button>
+    </div>
+  </div>
