--- a/src/app/converter/components/converter/converter.component.html
+++ b/src/app/converter/components/converter/converter.component.html
@@ -1,11 +1,11 @@
 <div class="alert alert-danger" role="alert" *ngIf="thereIsError">
   Erro obtendo dados. Tente novamente.
 </div>
-<div class="container-xl m-xl-aouto d-flex flex-wrap justify-content-center vh-100 mt-5 mx-md-5 w-100">
+<div class="container-xl m-xl-auto d-flex flex-wrap justify-content-center vh-md-100 my-5 mx-md-5 w-100 p-sm-0">
   <div class="col-12 col-xl-6 d-flex justify-content-center">
     <h2 class="mt-5 pt-3" *ngIf="!converterInfo">Nenhum Resultado...</h2>
     <div class="" *ngIf="converterInfo">
-      <div>
+      <div class="d-flex flex-column">
         <h3>Em {{ converterData.date | dataBr }}</h3>
 
         <h2>
@@ -17,7 +17,7 @@
         </h2>
       </div>
 
-      <div class="d-flex justify-content-end px-4">
+      <div class="d-flex align-self-center mb-2">
         <button type="button" class="btn btn-primary" (click)="newQuoteQuery()">
           Nova consulta
         </button>
